--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:itemBackground="@drawable/drawable_selector"
-            app:itemIconTint="@color/color_selector"
-            app:itemTextColor="@color/color_selector"
+            app:itemBackground="@drawable/bottom_navigation_element_background"
+            app:itemIconTint="@color/selector_bottom_navigation_icon"
+            app:itemTextColor="@color/selector_bottom_navigation_icon"
             android:background="@color/B_black"
             android:layout_gravity="bottom"
             app:menu="@menu/bottom_navigation_menu"
