--- a/app/src/main/res/layout/fragment_my_fares.xml
+++ b/app/src/main/res/layout/fragment_my_fares.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MyFaresFragment"
-    android:background="@color/B_black"
+    android:background="@color/black"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    tools:context=".fragments.MyFaresFragment">
 
     <TextView
         android:layout_width="match_parent"
