--- a/app/src/main/res/layout/fragment_my_market.xml
+++ b/app/src/main/res/layout/fragment_my_market.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MyMarketFragment"
-    android:background="@color/B_black"
+    android:background="@color/black"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    tools:context=".fragments.MyMarketFragment">
 
     <TextView
         android:layout_width="match_parent"
