--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/page_1"
+        android:id="@+id/timelineFragment"
         android:enabled="true"
         android:icon="@drawable/ic_timeline"
         android:title="Timeline"/>
     <item
-        android:id="@+id/page_2"
+        android:id="@+id/myMarketFragment"
         android:enabled="true"
         android:icon="@drawable/ic_mymarket"
         android:title="My market"/>
 
     <item
-        android:id="@+id/page_3"
+        android:id="@+id/myFaresFragment"
         android:enabled="true"
         android:icon="@drawable/ic_salesandorders"
         android:title="My fares"/>
