TimeLinefragment updated, token problems resolved

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -24,28 +24,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:src="@drawable/ic_logo"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
-
-    <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
         android:layout_marginTop="40dp"
-        android:fontFamily="sans-serif"
-        android:text="@string/azaar"
-        android:textColor="@color/light_blue"
-        android:textSize="29sp"
-        android:textStyle="bold"
+        android:src="@drawable/ic_bazaar_logo_coloured"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
