--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -78,7 +78,8 @@
             android:layout_marginEnd="40dp"
             android:layout_marginRight="40dp"
             android:hint="Username"
-            android:theme="@style/LoginTextInputLayout"
+            style="@style/LoginTextInputLayout"
+            app:boxStrokeColor="@color/selector_edit_text_border_login"
             app:endIconDrawable="@drawable/ic_eye"
             app:endIconMode="custom"
             app:endIconTint="@color/selector_icon_input_layout_color"
@@ -91,7 +92,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:singleLine="true"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:theme="@style/EditTextCreateLogin"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -104,7 +108,8 @@
             android:layout_marginEnd="40dp"
             android:layout_marginRight="40dp"
             android:hint="Email"
-            android:theme="@style/LoginTextInputLayout"
+            style="@style/LoginTextInputLayout"
+            app:boxStrokeColor="@color/selector_edit_text_border_login"
             app:endIconDrawable="@drawable/ic_eye"
             app:endIconMode="custom"
             app:endIconTint="@color/selector_icon_input_layout_color"
@@ -117,7 +122,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:singleLine="true"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:theme="@style/EditTextCreateLogin"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatButton
