--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,14 +75,18 @@
             app:endIconMode="custom"
             app:endIconDrawable="@drawable/ic_eye"
             app:endIconTint="@color/selector_icon_input_layout_color"
-            android:theme="@style/LoginTextInputLayout">
+            app:boxStrokeColor="@color/selector_edit_text_border_login"
+            style="@style/LoginTextInputLayout">
 
             <EditText
                 android:id="@+id/username_et"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:textSize="14sp"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:theme="@style/EditTextCreateLogin"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,7 +107,8 @@
             android:layout_marginEnd="40dp"
             android:layout_marginRight="40dp"
             app:layout_constraintTop_toBottomOf="@+id/username_til"
-            android:theme="@style/LoginTextInputLayout">
+            app:boxStrokeColor="@color/selector_edit_text_border_login"
+            style="@style/LoginTextInputLayout">
 
             <EditText
                 android:id="@+id/password_et"
@@ -111,7 +116,10 @@
                 android:layout_height="56dp"
                 android:inputType="textPassword"
                 android:textSize="14sp"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:theme="@style/EditTextCreateLogin"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
