--- a/app/src/main/res/layout/fragment_my_fares.xml
+++ b/app/src/main/res/layout/fragment_my_fares.xml
@@ -6,8 +6,8 @@
     android:background="@color/B_white"
     android:clickable="true"
     android:focusable="true"
+    android:layout_marginBottom="50dp"
     tools:context=".fragments.MyFaresFragment">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
