--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,23 @@
 
 
     <style name="LoginTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <item name="colorPrimary">@color/light_blue</item>
+
         <item name="colorControlActivated">@color/light_blue</item>
-        <item name="colorOnSurface">@android:color/transparent</item>
+        <item name="colorControlNormal">@color/light_blue</item>
+        <item name="colorControlHighlight">@color/light_blue</item>
+
+        <item name="strokeColor">@color/light_blue</item>
+        <item name="strokeWidth">2dp</item>
+
+        <item name="android:textColor">@color/white</item>
+
+        <item name="colorOnSurface">@color/light_blue</item>
         <item name="android:textColorPrimary">@color/B_white</item>
 
         <!-- border color -->
-        <item name="boxStrokeColor">@color/light_blue</item>
+        <item name="boxStrokeColor">@color/selector_edit_text_border_login</item>
         <item name="boxStrokeWidth">2dp</item>
         <!-- The color of the label when it is collapsed and the text field is active -->
         <item name="hintTextColor">@color/selector_text_input_layout_hint_color</item>
@@ -27,12 +38,69 @@
         <item name="android:textColorHint">@color/selector_text_input_layout_hint_color</item>
     </style>
 
+    <style name="FareTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="colorPrimary">@color/light_blue</item>
+
+        <item name="colorControlActivated">@color/light_blue</item>
+        <item name="colorControlNormal">@color/light_blue</item>
+        <item name="colorControlHighlight">@color/light_blue</item>
+
+        <item name="strokeColor">@color/black</item>
+        <item name="strokeWidth">2dp</item>
+
+        <item name="android:textColor">@color/black</item>
+
+        <item name="colorOnSurface">@color/black</item>
+        <item name="android:textColorPrimary">@color/B_black</item>
+
+        <!-- border color -->
+        <item name="boxStrokeColor">@color/selector_edit_text_border_fare</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <!-- The color of the label when it is collapsed and the text field is active -->
+        <item name="hintTextColor">@color/selector_text_input_layout_hint_fare_color</item>
+        <!-- The color of the label in all other text field states (such as resting and disabled) -->
+        <item name="android:textColorHint">@color/selector_text_input_layout_hint_fare_color</item>
+    </style>
+
+    <style name="FareTextInputLayoutDropdown" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="endIconTint">@color/B_black</item>
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorControlActivated">@color/light_blue</item>
+        <item name="colorControlNormal">@color/light_blue</item>
+        <item name="colorControlHighlight">@color/light_blue</item>
+
+        <item name="strokeColor">@color/black</item>
+        <item name="strokeWidth">2dp</item>
+
+        <item name="android:textColor">@color/black</item>
+
+        <item name="colorOnSurface">@color/black</item>
+        <item name="android:textColorPrimary">@color/B_black</item>
+
+        <!-- border color -->
+        <item name="boxStrokeColor">@color/selector_edit_text_border_fare</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <!-- The color of the label when it is collapsed and the text field is active -->
+        <item name="hintTextColor">@color/selector_text_input_layout_hint_fare_color</item>
+        <!-- The color of the label in all other text field states (such as resting and disabled) -->
+        <item name="android:textColorHint">@color/selector_text_input_layout_hint_fare_color</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/white</item>
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryDark">@color/light_blue</item>
+        <item name="colorAccent">@color/light_blue</item>
+        <item name="colorControlActivated">@color/light_blue</item>
+    </style>
+
+    <style name="EditTextCreateLogin">
+        <item name="colorControlActivated">@color/light_blue</item>
+    </style>
+
+    <style name="EditTextCreateFare">
+        <item name="colorControlActivated">@color/B_black</item>
     </style>
 
 </resources>
