--- a/app/src/main/res/layout/fragment_my_market.xml
+++ b/app/src/main/res/layout/fragment_my_market.xml
@@ -37,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:paddingBottom="90dp"
         android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
 
