--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -59,7 +59,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="212 Fairs"
+        android:text="0 Fairs"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
@@ -80,7 +80,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:clipToPadding="false"
+        android:paddingBottom="175dp"
         app:layout_constraintTop_toBottomOf="@+id/number_of_fairs_tv" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
