--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -46,10 +46,12 @@
         android:layout_marginLeft="18dp"
         android:layout_marginTop="25dp"
         android:src="@drawable/ic_settings_appbar"
+        android:clickable="true"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintStart_toEndOf="@+id/product_image_civ"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/profile_name_tv"
