--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="light_blue">#00B5C0</color>
     <color name="B_black">#212121</color>
     <color name="B_black_op50">#50212121</color>
+    <color name="B_white_cc">#CCCCCC</color>
     <color name="transparent">#00000000 </color>
     <color name="B_white_op50">#50EEEEEE</color>
     <color name="red">#FF0000</color>
