--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toTopOf="@+id/profile_name_tv" />
 
     <TextView
-        android:id="@+id/short_description_et"
+        android:id="@+id/description_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -111,8 +111,8 @@
         android:text="Amount:"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/amount_edit_tv"
-        app:layout_constraintTop_toTopOf="@+id/amount_edit_tv"
-        tools:layout_editor_absoluteX="68dp" />
+        app:layout_constraintStart_toStartOf="@+id/product_name_tv"
+        app:layout_constraintTop_toTopOf="@+id/amount_edit_tv" />
 
     <TextView
         android:id="@+id/amount_edit_tv"
@@ -178,7 +178,7 @@
         app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/short_description_et"
+        app:layout_constraintTop_toBottomOf="@+id/description_tv"
         app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
