--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -86,6 +86,18 @@
         app:layout_constraintStart_toEndOf="@+id/product_image_civ"
         app:layout_constraintTop_toBottomOf="@+id/status_sp" />
 
+
+    <ImageView
+        android:id="@+id/delete_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:src="@drawable/ic_edit"
+        app:layout_constraintBottom_toBottomOf="@+id/arrow_iv"
+        app:layout_constraintEnd_toStartOf="@+id/arrow_iv"
+        app:layout_constraintTop_toTopOf="@+id/arrow_iv" />
+
     <ImageView
         android:id="@+id/arrow_iv"
         android:layout_width="wrap_content"
